--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="wrapper">
-            {% with messages = get_flashed_messages() %}
+            <!-- {% with messages = get_flashed_messages() %}
             {% if messages %}
             <ul>
             {% for message in messages %}
@@ -18,7 +18,7 @@
             {% endfor %}
             </ul>
             {% endif %}
-            {% endwith %}
+            {% endwith %} -->
             <h1>friends VK online</h1>
             <form action="" method="post" name="login">
                 {{ form.hidden_tag() }}
